<resources>
    <string name="app_name">Voice Memo</string>
    <string name="title_voice_memo">&#x97F3;&#x58F0;&#x30E1;&#x30E2;</string>
    <string name="title_mode_selection">&#x4F7F;&#x7528;&#x30E2;&#x30FC;&#x30C9;&#x3092;&#x9078;&#x629E;</string>
    <string name="hint_mode_selection">&#x7528;&#x9014;&#x306B;&#x5408;&#x308F;&#x305B;&#x3066;&#x3001;&#x30AA;&#x30F3;&#x30E9;&#x30A4;&#x30F3;&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x304B;&#x30AA;&#x30D5;&#x30E9;&#x30A4;&#x30F3;&#x9332;&#x97F3;&#x304B;&#x3092;&#x9078;&#x3093;&#x3067;&#x304F;&#x3060;&#x3055;&#x3044;&#x3002;</string>
    <string name="button_mode_online">&#x30AA;&#x30F3;&#x30E9;&#x30A4;&#x30F3;&#x3067;&#x4F7F;&#x7528;</string>
    <string name="button_mode_offline">&#x30AA;&#x30D5;&#x30E9;&#x30A4;&#x30F3;&#x3067;&#x4F7F;&#x7528;</string>
    <string name="command_mode_online">&#x30AA;&#x30F3;&#x30E9;&#x30A4;&#x30F3;</string>
    <string name="command_mode_offline">&#x30AA;&#x30D5;&#x30E9;&#x30A4;&#x30F3;</string>
    <string name="hint_mode_online">&#x30CD;&#x30C3;&#x30C8;&#x30EF;&#x30FC;&#x30AF;&#x63A5;&#x7D9A;&#x6642;&#x306B; RealWear Dictation &#x3067;&#x97F3;&#x58F0;&#x3092;&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x5316;&#x3057;&#x307E;&#x3059;&#x3002;</string>
    <string name="hint_mode_offline">&#x901A;&#x4FE1;&#x3092;&#x4F7F;&#x308F;&#x305A;&#x3001;&#x97F3;&#x58F0;&#x3092; WAV &#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3068;&#x3057;&#x3066;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3059;&#x3002;</string>
    <string name="label_state_title">&#x72B6;&#x614B;</string>
    <string name="label_transcript_title">&#x9332;&#x97F3;&#x30E1;&#x30E2;</string>
    <string name="hint_audio">&#x3053;&#x3053;&#x306B;&#x9332;&#x97F3;&#x72B6;&#x614B;&#x3068;&#x4FDD;&#x5B58;&#x7D50;&#x679C;&#x304C;&#x8868;&#x793A;&#x3055;&#x308C;&#x307E;&#x3059;&#x3002;</string>
    <string name="hint_online">&#x3053;&#x3053;&#x306B;&#x97F3;&#x58F0;&#x5165;&#x529B;&#x3057;&#x305F;&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x304C;&#x5165;&#x308A;&#x307E;&#x3059;&#x3002;</string>
    <string name="hint_audio_recording">&#x9332;&#x97F3;&#x4E2D;&#x3067;&#x3059;&#x3002;&#x300C;&#x9332;&#x97F3;&#x505C;&#x6B62;&#x300D;&#x3067;&#x97F3;&#x58F0;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3059;&#x3002;</string>
    <string name="hint_audio_saving">&#x9332;&#x97F3;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x3066;&#x3044;&#x307E;&#x3059;&#x3002;</string>
    <string name="hint_audio_saved">&#x97F3;&#x58F0;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;%1$s</string>
    <string name="hint_audio_failed">&#x97F3;&#x58F0;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306E;&#x4FDD;&#x5B58;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;: %1$s</string>
    <string name="button_start">&#x9332;&#x97F3;&#x958B;&#x59CB;</string>
    <string name="button_start_online">&#x97F3;&#x58F0;&#x5165;&#x529B;&#x958B;&#x59CB;</string>
    <string name="button_stop">&#x9332;&#x97F3;&#x505C;&#x6B62;</string>
    <string name="button_cancel_online">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x4E2D;&#x6B62;</string>
    <string name="button_save_text">&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x4FDD;&#x5B58;</string>
    <string name="button_change_mode">&#x30E2;&#x30FC;&#x30C9;&#x5909;&#x66F4;</string>
    <string name="command_start">&#x958B;&#x59CB;</string>
    <string name="command_stop">&#x505C;&#x6B62;</string>
    <string name="command_cancel">&#x4E2D;&#x6B62;</string>
    <string name="command_change_mode">&#x5909;&#x66F4;</string>
    <string name="command_transcribe">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;</string>
    <string name="command_input">&#x5165;&#x529B;</string>
    <string name="command_save">&#x4FDD;&#x5B58;</string>
    <string name="label_saved_path">&#x81EA;&#x52D5;&#x4FDD;&#x5B58;&#x5148;: Music/VoiceMemo</string>
    <string name="label_transcription_status">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x72B6;&#x614B;</string>
    <string name="label_text_save_path">&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x4FDD;&#x5B58;&#x5148;: Documents/VoiceMemo</string>
    <string name="label_latest_save_empty">&#x307E;&#x3060;&#x81EA;&#x52D5;&#x4FDD;&#x5B58;&#x3055;&#x308C;&#x3066;&#x3044;&#x307E;&#x305B;&#x3093;&#x3002;</string>
    <string name="label_latest_save">&#x6700;&#x65B0;&#x4FDD;&#x5B58;: %1$s</string>
    <string name="label_latest_save_unknown">&#x4FDD;&#x5B58;&#x6E08;&#x307F;&#x30D5;&#x30A1;&#x30A4;&#x30EB;</string>
    <string name="label_transcription_ready">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x3092;&#x958B;&#x59CB;&#x3067;&#x304D;&#x307E;&#x3059;&#x3002;</string>
    <string name="label_text_input_ready">&#x97F3;&#x58F0;&#x5165;&#x529B;&#x3092;&#x958B;&#x59CB;&#x3067;&#x304D;&#x307E;&#x3059;&#x3002;</string>
    <string name="label_transcription_waiting">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x7D50;&#x679C;&#x3092;&#x5F85;&#x3063;&#x3066;&#x3044;&#x307E;&#x3059;&#x3002;</string>
    <string name="label_text_input_waiting">&#x97F3;&#x58F0;&#x5165;&#x529B;&#x7D50;&#x679C;&#x3092;&#x5F85;&#x3063;&#x3066;&#x3044;&#x307E;&#x3059;&#x3002;</string>
    <string name="label_transcription_completed">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x5B8C;&#x4E86;: %1$s</string>
    <string name="label_text_input_completed">&#x97F3;&#x58F0;&#x5165;&#x529B;&#x5B8C;&#x4E86;: %1$s</string>
    <string name="label_transcription_error">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="label_transcription_stopped">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x3092;&#x4E2D;&#x6B62;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="label_text_input_keyboard">&#x97F3;&#x58F0;&#x30AD;&#x30FC;&#x30DC;&#x30FC;&#x30C9;&#x3092;&#x958B;&#x304D;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="recording_time_initial">00:00</string>
    <string name="recording_time_not_applicable">--:--</string>
    <string name="state_recording">&#x9332;&#x97F3;&#x4E2D;</string>
    <string name="state_idle">&#x505C;&#x6B62;&#x4E2D;</string>
    <string name="mode_online_description">&#x30AA;&#x30F3;&#x30E9;&#x30A4;&#x30F3;&#x30E2;&#x30FC;&#x30C9;: RealWear Dictation &#x307E;&#x305F;&#x306F;&#x97F3;&#x58F0;&#x30AD;&#x30FC;&#x30DC;&#x30FC;&#x30C9;&#x3067;&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x5165;&#x529B;&#x3057;&#x3001;txt &#x3067;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3059;&#x3002;</string>
    <string name="mode_offline_description">&#x30AA;&#x30D5;&#x30E9;&#x30A4;&#x30F3;&#x30E2;&#x30FC;&#x30C9;: &#x30C7;&#x30D0;&#x30A4;&#x30B9;&#x5185;&#x306B; WAV &#x97F3;&#x58F0;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3059;&#x3002;</string>
    <string name="message_permission_denied">&#x30DE;&#x30A4;&#x30AF;&#x6A29;&#x9650;&#x304C;&#x306A;&#x3044;&#x305F;&#x3081;&#x9332;&#x97F3;&#x3092;&#x958B;&#x59CB;&#x3067;&#x304D;&#x307E;&#x305B;&#x3093;&#x3002;</string>
    <string name="message_recording_in_progress">&#x9332;&#x97F3;&#x4E2D;&#x3067;&#x3059;&#x3002;RealWear &#x306E;&#x97F3;&#x58F0;&#x30B3;&#x30DE;&#x30F3;&#x30C9;&#x306F;&#x4E00;&#x6642;&#x505C;&#x6B62;&#x4E2D;&#x3067;&#x3059;&#x3002;&#x30A2;&#x30AF;&#x30B7;&#x30E7;&#x30F3;&#x30DC;&#x30BF;&#x30F3;&#x3067;&#x505C;&#x6B62;&#x3067;&#x304D;&#x307E;&#x3059;&#x3002;</string>
    <string name="message_saving_audio">&#x505C;&#x6B62;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;&#x9332;&#x97F3;&#x97F3;&#x58F0;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x3066;&#x3044;&#x307E;&#x3059;&#x3002;</string>
    <string name="message_realwear_dictation_in_progress">RealWear &#x306E;&#x97F3;&#x58F0;&#x5165;&#x529B;&#x3092;&#x958B;&#x59CB;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;&#x78BA;&#x5B9A;&#x3059;&#x308B;&#x3068;&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x6B04;&#x306B;&#x8FFD;&#x8A18;&#x3055;&#x308C;&#x307E;&#x3059;&#x3002;</string>
    <string name="message_realwear_dictation_cancelled">RealWear &#x306E;&#x97F3;&#x58F0;&#x5165;&#x529B;&#x3092;&#x30AD;&#x30E3;&#x30F3;&#x30BB;&#x30EB;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_realwear_dictation_failed">RealWear &#x306E;&#x97F3;&#x58F0;&#x5165;&#x529B;&#x3092;&#x958B;&#x59CB;&#x3067;&#x304D;&#x307E;&#x305B;&#x3093;&#x3067;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_realwear_dictation_empty">&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x7D50;&#x679C;&#x304C;&#x53D6;&#x5F97;&#x3067;&#x304D;&#x307E;&#x305B;&#x3093;&#x3067;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_realwear_dictation_stopped">&#x30A2;&#x30D7;&#x30EA;&#x5074;&#x3067;&#x6587;&#x5B57;&#x8D77;&#x3053;&#x3057;&#x5F85;&#x6A5F;&#x3092;&#x4E2D;&#x6B62;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_text_empty">&#x4FDD;&#x5B58;&#x3059;&#x308B;&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x304C;&#x3042;&#x308A;&#x307E;&#x305B;&#x3093;&#x3002;</string>
    <string name="message_text_saved_short">&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x3092;&#x4FDD;&#x5B58;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_text_save_failed">&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x4FDD;&#x5B58;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;: %1$s</string>
    <string name="message_text_save_failed_short">&#x30C6;&#x30AD;&#x30B9;&#x30C8;&#x4FDD;&#x5B58;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_audio_buffer_failed">&#x9332;&#x97F3;&#x30D0;&#x30C3;&#x30D5;&#x30A1;&#x306E;&#x521D;&#x671F;&#x5316;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_mic_init_failed">&#x30DE;&#x30A4;&#x30AF;&#x306E;&#x521D;&#x671F;&#x5316;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_session_init_failed">&#x9332;&#x97F3;&#x30BB;&#x30C3;&#x30B7;&#x30E7;&#x30F3;&#x306E;&#x521D;&#x671F;&#x5316;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_recording_failed">&#x9332;&#x97F3;&#x4E2D;&#x306B;&#x30A8;&#x30E9;&#x30FC;&#x304C;&#x767A;&#x751F;&#x3057;&#x307E;&#x3057;&#x305F;: %1$s</string>
    <string name="message_recording_empty">&#x9332;&#x97F3;&#x30C7;&#x30FC;&#x30BF;&#x304C;&#x53D6;&#x5F97;&#x3067;&#x304D;&#x307E;&#x305B;&#x3093;&#x3067;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_auto_save_failed">&#x81EA;&#x52D5;&#x4FDD;&#x5B58;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;: %1$s</string>
    <string name="message_auto_save_failed_short">&#x81EA;&#x52D5;&#x4FDD;&#x5B58;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_save_file_failed">&#x4FDD;&#x5B58;&#x5148;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306E;&#x4F5C;&#x6210;&#x306B;&#x5931;&#x6557;&#x3057;&#x307E;&#x3057;&#x305F;&#x3002;</string>
    <string name="message_unknown_error">&#x4E0D;&#x660E;&#x306A;&#x30A8;&#x30E9;&#x30FC;&#x3067;&#x3059;&#x3002;</string>
    <string name="text_audio_path_unavailable">&#x672A;&#x751F;&#x6210;</string>
</resources>
